src/Model/components/RightSidebar/RightSidebar.css
.help_text_h1 {
    -fx-font-smoothing-type: lcd;
    -fx-font-size: 20pt;
}
.help_text_h2 {
    -fx-font-smoothing-type: lcd;
    -fx-font-size: 16pt;
}

.extended_help_label {
    -fx-font-smoothing-type: lcd;
    -fx-font-size: 20px;
}

.hyperlink {
    -fx-font-size: 21px;
}

.text-area {
    -fx-font-size: 16px;
    -fx-background-color: transparent;
}
.text-area .scroll-pane {
    -fx-background-color: transparent;
}

.text-area .scroll-pane .viewport{
    -fx-background-color: transparent;
}


.text-area .scroll-pane .content{
    -fx-background-color: transparent;
}

.btn-checkout{
    -fx-background-radius: 8;
    -fx-background-insets: -2;
    -fx-text-fill: white;
    -fx-font-size: 30;
    -fx-background-color: #189ad3;
}

.btn-checkout:hover{
    -fx-background-color: #107dac;
}

